--- a/vercel.json
+++ b/vercel.json
@@ -20,65 +20,21 @@
     { "source": "/debug/:path*", "destination": "/api/index.js" },
     { "source": "/health", "destination": "/api/index.js" },
     { "source": "/health/:path*", "destination": "/api/index.js" },
-    { "source": "/docs", "destination": "/api/index.js" }
-  ],
-  "routes": [
-    {
-      "src": "/favicon.ico",
-      "dest": "/public/favicon.ico"
-    },
-    {
-      "src": "/logo.jpg",
-      "dest": "/public/logo.jpg"
-    },
-    {
-      "src": "/style.css",
-      "dest": "/public/style.css"
-    },
-    {
-      "src": "/script.js",
-      "dest": "/public/script.js"
-    },
-    {
-      "src": "/js/(.*)",
-      "dest": "/public/js/$1"
-    },
-    {
-      "src": "/asset/(.*)",
-      "dest": "/asset/$1"
-    },
-    {
-      "src": "/login.html",
-      "dest": "/public/login.html"
-    },
-    {
-      "src": "/signup.html",
-      "dest": "/public/signup.html"
-    },
-    {
-      "src": "/admin-panel.html",
-      "dest": "/public/admin-panel.html"
-    },
-    {
-      "src": "/admin-users.html",
-      "dest": "/public/admin-users.html"
-    },
-    {
-      "src": "/admin-tools.html",
-      "dest": "/public/admin-tools.html"
-    },
-    {
-      "src": "/download-tiktok.html",
-      "dest": "/public/download-tiktok.html"
-    },
-    {
-      "src": "/index.html",
-      "dest": "/public/index.html"
-    },
-    {
-      "src": "^/$",
-      "dest": "/public/index.html"
-    }
+    { "source": "/docs", "destination": "/api/index.js" },
+    { "source": "/favicon.ico", "destination": "/public/favicon.ico" },
+    { "source": "/logo.jpg", "destination": "/public/logo.jpg" },
+    { "source": "/style.css", "destination": "/public/style.css" },
+    { "source": "/script.js", "destination": "/public/script.js" },
+    { "source": "/js/:path*", "destination": "/public/js/:path*" },
+    { "source": "/asset/:path*", "destination": "/asset/:path*" },
+    { "source": "/login.html", "destination": "/public/login.html" },
+    { "source": "/signup.html", "destination": "/public/signup.html" },
+    { "source": "/admin-panel.html", "destination": "/public/admin-panel.html" },
+    { "source": "/admin-users.html", "destination": "/public/admin-users.html" },
+    { "source": "/admin-tools.html", "destination": "/public/admin-tools.html" },
+    { "source": "/download-tiktok.html", "destination": "/public/download-tiktok.html" },
+    { "source": "/index.html", "destination": "/public/index.html" },
+    { "source": "/", "destination": "/public/index.html" }
   ],
   "headers": [
     {
